@@ -239,7 +239,7 @@ public final class Invoker {
 			}
 			else if (trgClass.getName().equals("java.lang.Character")) {
 				String str = Caster.toString(parameter);
-				if (str.length() == 1) return new Character(str.toCharArray()[0]);
+				if (str.length() == 1) return Character.valueOf(str.toCharArray()[0]);
 				return null;
 			}
 			else if (trgClass.getName().equals("java.lang.Short")) {
