@@ -413,7 +413,7 @@ public final class Reflector {
 			if (trgClass == Double.class) return Caster.toDouble(src);
 			if (trgClass == Character.class) {
 				String str = Caster.toString(src, null);
-				if (str != null && str.length() == 1) return new Character(str.charAt(0));
+				if (str != null && str.length() == 1) return Character.valueOf(str.charAt(0));
 			}
 		}
 
@@ -1552,7 +1552,7 @@ public final class Reflector {
 	private static Character[] toRefArray(char[] src) {
 		Character[] trg = new Character[src.length];
 		for (int i = 0; i < trg.length; i++) {
-			trg[i] = new Character(src[i]);
+			trg[i] = Character.valueOf(src[i]);
 		}
 		return trg;
 	}
